# oxidiz3ds

./: Cargo.toml  README.md  justfile
crates/oxidiz3ds-hw/: Cargo.toml
crates/oxidiz3ds-hw/src/: lib.rs  memory_map.rs  specs.rs
crates/oxidiz3ds-hw/src/mmio/: gpu.rs  mod.rs  sdmmc.rs
crates/threemu/: Cargo.toml
crates/threemu/src/: args.rs  bootrom.rs  core.rs  cp15.rs  cpu_types.rs  display.rs  firm.rs  lib.rs  memory.rs  mmio.rs  scheduler.rs
crates/threemu/src/mmio/: generic.rs  gpu.rs  sdmmc.rs
tests/threemu-test-arm11/: Cargo.toml  armv6k-none-eabihf.json  build.rs  memory.x
tests/threemu-test-arm11/src/: lib.rs
tests/threemu-test-arm9/: Cargo.toml  build.rs  link.x
tests/threemu-test-arm9/src/: lib.rs
